<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.edu.tarc.lab22profile.MainActivity">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/EmailDisplay"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/NameDisplay"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <Button
        android:id="@+id/buttonUpateProfile"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:onClick="updateProfile"
        android:text="@string/UpdateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonPrivacyStatement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="visitTARUC"
        app:srcCompat="@drawable/ic_web_black_24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:onClick="showDial"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonPrivacyStatement"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_phone_android_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:onClick="showSendTo"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonContact"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_email_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="7dp"
        android:onClick="showMain"
        app:layout_constraintLeft_toRightOf="@+id/imageButtonEmail"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail"
        app:srcCompat="@drawable/ic_home_black_24dp" />

</android.support.constraint.ConstraintLayout>
